update server CE